--- a/FMS/MainWindow.xaml
+++ b/FMS/MainWindow.xaml
@@ -12,6 +12,7 @@
     x:Name="Main"
     Width="1920"
     Height="1080"
+    d:DataContext="{d:DesignInstance Type=local1:MainWindowViewModel}"
     AllowsTransparency="True"
     WindowStartupLocation="CenterScreen"
     WindowStyle="None"
