--- a/FMS/Views/Main/LiveForklfitsPage.xaml
+++ b/FMS/Views/Main/LiveForklfitsPage.xaml
@@ -5,9 +5,11 @@
     xmlns:conv="clr-namespace:FMS.ViewModels.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:FMS.Views.Main"
+    xmlns:main="clr-namespace:FMS.ViewModels.Main"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     Title="LiveForklfitsPage"
+    d:DataContext="{d:DesignInstance Type=main:LiveForkliftsPageViewModel}"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
