--- a/FMS/Views/Main/UsersPage.xaml
+++ b/FMS/Views/Main/UsersPage.xaml
@@ -5,9 +5,11 @@
     xmlns:conv="clr-namespace:FMS.ViewModels.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:FMS.Views.Main"
+    xmlns:main="clr-namespace:FMS.ViewModels.Main"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     Title="UsersPage"
+    d:DataContext="{d:DesignInstance Type=main:UsersPageViewModel}"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
@@ -131,9 +133,9 @@
                             TextAlignment="Center" />
                         <Separator Height="25" Margin="0,-5,0,0" />
                         <StackPanel Orientation="Horizontal">
-                            <RadioButton Content="Klient" IsChecked="{Binding EditedUser.Client}" />
-                            <RadioButton Content="Instalator" IsChecked="{Binding EditedUser.Installator}" />
-                            <RadioButton Content="Administrator" IsChecked="{Binding EditedUser.Admin}" />
+                            <RadioButton Content="Klient" IsChecked="{Binding EditedUser.IsClient}" />
+                            <RadioButton Content="Instalator" IsChecked="{Binding EditedUser.IsInstallator}" />
+                            <RadioButton Content="Administrator" IsChecked="{Binding EditedUser.IsAdmin}" />
                         </StackPanel>
                     </StackPanel>
                 </StackPanel>
